# cityx

./: ..idea  .gitignore  .oi  .work.plan  AyaWhite.code-workspace  CHANGELOG.md  Cargo.toml  Cargo2.toml  Gry — skrót .lnk  InstallationLog.txt  README.md  TestPlaceme.lua  Untitled-1.py  _config.yml  aftman.toml  citix.toml  cityx.rbxl  default.project.json  foreman.toml  index.html  main.rs  myPlaceFile.rbxl  new.lua  new.luau  package.json  rokit.toml  sourcemap.json  struktura  wally.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy_staging.yaml  jekyll-gh-pages.yml  montaz.yml
Lighting/001/KW Lifts Series 1/: CustomLabel.lua
Lighting/001/KW Lifts Series 1/Car/KWAcme/Ind/: IndicatorControl.server.lua
Lighting/001/KW Lifts Series 1/Car/Panel/3/Label/: Script.server.lua
Lighting/001/KW Lifts Series 1/Car/Voices/: Script.server.lua
Lighting/001/KW Lifts Series 1/Script/: MainModule.lua  init.server.lua
Lighting/001/KW Lifts Series 1/Shaft/1/Ind/: IndicatorControl.server.lua
Lighting/001/KW Lifts Series 1/Shaft/2/Ind/DIG2/: Script.server.lua
Lighting/001/KW Lifts Series 1/Shaft/3/Ind/: IndicatorControl.server.lua
Lighting/001/KW Lifts Series 1/Shaft/3/Ind/ARW1/: Script.server.lua
Lighting/001/Telepads/teleporta/: Script.server.lua
Lighting/001/Telepads/teleportb/: Script.server.lua
Lighting/DestroyMe/CentralPart/: Script.server.lua
Lighting/DestroyMe/Folder/CentralPart/CentralPart/: Script.server.lua  SpinExampleScript.server.lua
MaterialService/: init.meta.json
MaterialService/Construction Site Props-1/Folder/Model/i am so sorry for my sins/: Script.server.lua
ReplicatedFirst/Synchronized/: ModuleScript.lua  init.client.lua
ReplicatedStorage/: DataStoreModule.lua  DiscordModule.lua  PlayerManagerModule.lua  PlayerModule.lua  RobloxAPI.lua  RoleMappingSchema.lua  Schema.lua  UserRolesSchema.lua
ServerScriptService/: Script.server.lua
ServerScriptService/Folder/: GearOnDeath.server.lua  Leaderboard.server.lua
ServerScriptService/Whitekali/: MapSchema.lua
ServerScriptService/Whitekaliutil/: MapGeneration.lua  Script.server.lua  Security.lua  __GameLoop__.server.lua
StarterGui/: FloweyFlash.client.lua  Old cursor  (Put in StarterGui).client.lua  ServerSocialScript.server.lua
StarterGui/2016 loading screen/loading_background/: LocalScript.client.lua
StarterGui/2016 loading screen/loading_background/Creator/: LocalScript.client.lua
StarterGui/2016 loading screen/loading_background/ImageButton/: LocalScript.client.lua
StarterGui/2016 loading screen/loading_background/LoadingCircle/: Fade.server.lua  LocalScript.client.lua
StarterGui/2016 loading screen/loading_background/Loading_inner/: LocalScript.client.lua
StarterGui/2016 loading screen/loading_background/Place/: Fade.server.lua  LocalScript.client.lua
Workspace/Additional/MaP__/: Script.server.lua
Workspace/Additional/MaP__/Elevator/Elevator Door/Door/: Script.server.lua
Workspace/Additional/MaP__/Elevator/Elevator Script/: READ ME -- INSTRUCTIONS!.server.lua  READ ME FOR FAKE DOOR.server.lua  READ ME FOR TELEPADS.server.lua  init.server.lua
Workspace/Additional/MaP__/Elevator/SpawnPoint/SpawnLocation/Se_SpawnScript/: init.server.lua
Workspace/ReplicatedStorage/: DiscordModule.lua  ListModule.lua  OverheadGUIModule.lua  PlayerDataSchema.lua  RobloxModule.lua  Schema.lua  UserRolesSchema.lua
Workspace/ReplicatedStorage/serverss/Folder/: Limit Fire.server.lua  Name Tag.server.lua
Workspace/ReplicatedStorage/serverss/Whitekali/: MapGeneratorModule.lua  MapSettings.lua
Workspace/ReplicatedStorage/serverss/Whitekaliutil/: Admin.lua  CentralPart.lua  Data.lua  Item.lua  PlatformCreation.lua  Player.lua  Utils.lua
cityx-backend/: Cargo.toml  plan funkcji
cityx-renderer/: Cargo.toml
src/: lib.rs  main.rs
src/Common/: Log.lua
src/client/: WalkThroughPlayers.client.lua
src/modules/: LoggerModule.lua  PlayerModule.lua  TileMenagerModule.lua  TileModule.lua
src/server/: .idea  ModuleLoader.lua  Server.server.lua
src/shared/: ModuleScript.lua
