[package]
name = "cityx"
version = "0.0.1"
edition = "2021"
description = "A game engine and early standalone rust framework meanted to use as engine for Roblox games"
authors = ["Spark Team <spark.team@gmail.com>"]


[dependencies]  
serde = "1.0"
#matter = "matter-ecs/matter@0.8.3"
#roact = "roblox/roact@1.4.0"
#base64 = "reselim/base64@3.0.0"
#signal = "sleitnick/signal@2.0.1"
#trove = "sleitnick/trove@1.3.0"
#promise = "evaera/promise@4.0.0"
anyhow = "1.0.33"
blake3 = "0.3.7"
crossterm = "0.22.1"
dirs = "3.0.1"
env_logger = "0.8.1"
fs-err = "2.5.0"
git2 = "0.16.1"
hex = "0.4.2"
indoc = "1.0.3"
log = "0.4.11"
once_cell = "1.5.2"
opener = "0.5.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rpassword = "5.0.1"
semver = { version = "0.11.0", features = ["serde"] }
serde_json = "1.0.58"
structopt = "0.3.18"
tempfile = "3.1.0"
toml = "0.5.6"
toml_edit = "0.2.0"
url = { version = "2.1.1", features = ["serde"] }
walkdir = "2.3.1"
whoami = "1.1.2"
zip = "0.5.11"
globset = "0.4.8"
ubyte = "0.10.3"
indicatif = "0.17.4"
tokio = "1.28.2"
serial_test = "2.0.0"

[workspace]
members = [
    "cityx-backend",
    "cityx-renderer"
]

[features]
selene = []
wally = []
tools = ["wally", "selene"]
vendored-libgit2 = ["git2/vendored-libgit2"]

[dev-dependencies]
insta = { version = "1.1.0" }

[lib]
name = "libcityx"
path = "src/lib.rs"

[[bin]]
name = "cityx"
path = "src/main.rs"
